feat: add local process runner interface
